CSS 2.1 failure: numerous counter-increment-* tests fail https://bugs.webkit.org/show_bug.cgi?id=73360

Source/WebCore:

Reviewed by Julien Chaffraix.

Allow counter-increment to handle integer underflow and overflow.
Also allow 'counter' to inherit.

* css/CSSStyleApplyProperty.cpp:
(WebCore::ApplyPropertyCounter::applyInheritValue):
(WebCore::ApplyPropertyCounter::applyValue):
(WebCore::ApplyPropertyCounter::createHandler):

LayoutTests:

WebKit dumpAsText() versions of the CSS test suite's counter-increment-001 and 002 are already present in
fast/css/counters, so add a dumpAsText version of tests 003 to 056.

Reviewed by Julien Chaffraix.

* fast/css/counters/counter-increment-inherit-expected.txt: Added.
* fast/css/counters/counter-increment-inherit.htm: Added.
* fast/css/counters/counter-increment-tests-expected.txt: Added.
* fast/css/counters/counter-increment-tests.htm: Added.

Canonical link: https://commits.webkit.org/90926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102528 268f45cc-cd09-0410-ab3c-d52691b4dbfc